--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -13,6 +13,7 @@ jobs:
       with:
         tf_actions_version: 0.12.13
         tf_actions_subcommand: 'fmt'
+        tf_actions_working_dir: './terraform'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -21,6 +22,7 @@ jobs:
       with:
         tf_actions_version: 0.12.13
         tf_actions_subcommand: 'init'
+        tf_actions_working_dir: './terraform'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -29,6 +31,7 @@ jobs:
       with:
         tf_actions_version: 0.12.13
         tf_actions_subcommand: 'validate'
+        tf_actions_working_dir: './terraform'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -37,6 +40,7 @@ jobs:
       with:
         tf_actions_version: 0.12.13
         tf_actions_subcommand: 'plan'
+        tf_actions_working_dir: './terraform'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
