--- a/.github/workflows/terraform-merge-master.yml
+++ b/.github/workflows/terraform-merge-master.yml
@@ -1,7 +1,8 @@
 name: 'Terraform GitHub Actions'
 on:
   push:
-    -master
+    branches:
+      -master
 jobs:
   terraform:
     name: 'Terraform'
