needed to be named different

--- a/.github/workflows/terraform-pr.yml
+++ b/.github/workflows/terraform-pr.yml
@@ -3,7 +3,7 @@ on:
   - pull_request
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'Terraform-plan'
     runs-on: ubuntu-latest
     steps:
     - name: 'Checkout'
