--- a/.github/workflows/terraform-merge-master.yml
+++ b/.github/workflows/terraform-merge-master.yml
@@ -5,7 +5,7 @@ on:
       -master
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'Terraform-apply'
     runs-on: ubuntu-latest
     steps:
     - name: 'Checkout'
