--- a/.github/workflows/terraform-merge-master.yml
+++ b/.github/workflows/terraform-merge-master.yml
@@ -55,6 +55,7 @@ jobs:
       with:
         tf_actions_version: 0.12.13
         tf_actions_subcommand: 'apply'
+        tf_actions_working_dir: './terraform'
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
