--- a/.github/workflows/ui-builder.yml
+++ b/.github/workflows/ui-builder.yml
@@ -11,7 +11,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: install pre-reqs
       run: |
-        apt install python python-pip npm yarn -y
+        apt-get update
+        apt-get install python python-pip npm yarn -y
         pip install awscli
     - name: ls
       run: ls
