--- a/.github/workflows/ui-builder.yml
+++ b/.github/workflows/ui-builder.yml
@@ -15,5 +15,5 @@ jobs:
         sudo apt-get update
         sudo apt-get install python python-pip npm yarn -y
         sudo pip install awscli
-    - name: 'yarn build'
-      run: cd ui && yarn build
+#    - name: 'yarn build'
+#      run: cd ui && yarn build
