Ui location configurable and general clean up
There was some crud left over from flailing, and this cleans some of
that up. It also makes the UI's location configurable.

--- a/.github/workflows/ui-builder.yml
+++ b/.github/workflows/ui-builder.yml
@@ -20,7 +20,7 @@ jobs:
     - name: yarn build
       run: cd ui && yarn build
     - name: archive name
-      run: echo "##[set-output name=name;]$(echo theagainagain-${GITHUB_SHA::8}.tar.gz)"
+      run: echo "##[set-output name=name;]$(echo theagainagain-${GITHUB_SHA}.tar.gz)"
       id: archive_name
     - name: branch name
       run: echo "##[set-output name=name;]$(echo ${GITHUB_REF#refs/heads/})"
