first pass at adding react (#16)
This work adds a basic create react app to the project. It also removes the server side page rendering in favor of this new app. I've added builds that push the UI to s3. Finally I made the UI serve up dir configurable so that it will work proper in java dev mode.

--- a/.github/workflows/ui-builder.yml
+++ b/.github/workflows/ui-builder.yml
@@ -8,12 +8,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: 'Checkout'
+    - name: Checkout
       uses: actions/checkout@master
-    - name: 'install pre-reqs'
+    - name: install pre-reqs
       run: |
         sudo apt-get update
         sudo apt-get install python python-pip npm yarn -y
         sudo pip install awscli
-#    - name: 'yarn build'
-#      run: cd ui && yarn build
+    - name: yarn install
+      run: cd ui && yarn install
+    - name: yarn build
+      run: cd ui && yarn build
+    - name: archive name
+      run: echo "##[set-output name=name;]$(echo theagainagain-${GITHUB_SHA}.tar.gz)"
+      id: archive_name
+    - name: branch name
+      run: echo "##[set-output name=name;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: branch_name
+    - name: tar ui
+      run: mkdir build && tar -czvf build/${{steps.archive_name.outputs.name}} ui/build
+    - name: upload pin file
+      run: echo "${{steps.archive_name.outputs.name}}" > build/${{steps.branch_name.outputs.name}}
+    - name: upload to s3
+      run: |
+        aws s3 cp build/${{steps.archive_name.outputs.name}} s3://theagainagain-assets/${{steps.archive_name.outputs.name}}
+        aws s3 cp build/${GITHUB_REF#refs/heads/} s3://theagainagain-assets/build/${{steps.branch_name.outputs.name}}
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'us-west-2'
