--- a/ui/package.json
+++ b/ui/package.json
@@ -19,11 +19,18 @@
     "@types/react-dropzone": "^5.1.0",
     "@types/react-router-dom": "^5.1.3",
     "apollo-boost": "^0.4.7",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.13",
+    "apollo-link-error": "^1.1.12",
+    "apollo-link-http": "^1.5.16",
     "apollo-upload-client": "^12.1.0",
     "graphiql": "^0.17.5",
     "graphql": "^14.6.0",
+    "graphql-tag": "^2.10.3",
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.12.0",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.12.0",
     "react-dropzone": "^10.2.1",
     "react-router-dom": "^5.1.2",
@@ -36,6 +43,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "tslint-check": "tslint-config-prettier-check ./tslint.json",
     "run-graphql-gen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
@@ -60,7 +68,12 @@
     "@graphql-codegen/typescript-operations": "1.12.2",
     "@graphql-codegen/typescript-react-apollo": "1.12.2",
     "@types/testing-library__jest-dom": "^5.0.1",
-    "@types/testing-library__react": "^9.1.2"
+    "@types/testing-library__react": "^9.1.2",
+    "prettier": "1.19.1",
+    "tslint": "^6.0.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-react": "^4.2.0"
   },
   "proxy": "http://localhost:8080"
 }
