--- a/ui/package.json
+++ b/ui/package.json
@@ -21,9 +21,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^4.0.1",
     "typescript": "~3.7.2",
-    "typesync": "^0.6.1"
+    "typesync": "^0.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -50,5 +50,5 @@
     "@types/testing-library__jest-dom": "^5.0.1",
     "@types/testing-library__react": "^9.1.2"
   },
-  "proxy": "http://localhost:8080"
+  "proxy": "http://localhost:8081"
 }
